@@ -4,24 +4,25 @@ import cc.azuramc.bedwars.compat.VersionUtil;
 import cc.azuramc.bedwars.util.LoggerUtil;
 import lombok.Getter;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * @author An5w1r@163.com
  */
 @Getter
 public class NMSProvider {
-    public final boolean laterThan1_8 = !VersionUtil.isVersion18();
     private NMSAccess access;
-    private String version;
+    private String nmsVersion;
 
     public NMSAccess setup() {
-        this.version = VersionUtil.getVersion();
-        this.access = createNMSAccess(version);
+        this.nmsVersion = VersionUtil.getNmsVersion();
+        this.access = createNMSAccess(nmsVersion);
 
         if (this.access == null) {
-            LoggerUtil.warn("NMS支持未找到 (" + this.version + ")! 启用兼容模式 可能存在意外问题!");
+            LoggerUtil.warn("NMS支持未找到 (" + this.nmsVersion + ")! 启用兼容模式 可能存在意外问题!");
             access = new CompatibilityModeNMS();
         } else {
-            LoggerUtil.info("正在使用受支持的版本! (" + this.version + ")");
+            LoggerUtil.info("正在使用受支持的版本! (" + this.nmsVersion + ")");
         }
 
         return access;
@@ -29,11 +30,13 @@ public class NMSProvider {
 
     private NMSAccess createNMSAccess(String version) {
         try {
-            return (NMSAccess) Class.forName(this.getClass().getPackage().getName() + ".NMS_" + version).newInstance();
-        } catch (ClassNotFoundException e) {
+            return (NMSAccess) Class.forName(this.getClass().getPackage().getName() + ".NMS_" + version).getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | NoSuchMethodException e) {
             LoggerUtil.warn("未受支持的版本: " + e.getMessage());
         } catch (InstantiationException | IllegalAccessException e) {
             LoggerUtil.warn("创建NMS访问失败: " + e.getMessage());
+        } catch (InvocationTargetException e) {
+            LoggerUtil.error("调用构造方法失败: " + e.getMessage());
         }
         return null;
     }
